--- a/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
@@ -164,6 +164,7 @@
 
     public async ValueTask DisposeAsync()
     {
+        base.Dispose();
         await JsRuntime.InvokeVoidAsync("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}");
     }
 
