--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -31,6 +31,8 @@
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
 @using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Interfaces;
 @using Energy.App.Standalone.Features.Setup.Household
+@using Energy.App.Standalone.Features.Setup.Household.Actions
+
 @using Energy.App.Standalone.Features.Setup.Meter
 @using Energy.App.Standalone.Features.Setup.Meter.Pages
 @using Energy.App.Standalone.Features.Setup.Meter.Store
