--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeter.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeter.razor
@@ -92,7 +92,7 @@
     }
 
 
-    private async Task HandleValidSubmit()
+    private void HandleValidSubmit()
     {
         if (_addingNotUpdating)
         {
