--- a/Energy.App.Standalone/Features/Setup/Setup.razor
+++ b/Energy.App.Standalone/Features/Setup/Setup.razor
@@ -9,6 +9,11 @@
 
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
+        <MudPaper Elevation="2" Class="p-2 mt-3">
+            <MudText Typo="Typo.h4" Align="Align.Center" Class="eme-focus">Setup</MudText>
+        </MudPaper>
+    </MudItem>
+    <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2 mt-2">
 
             <Household></Household>
