--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -21,15 +21,14 @@
 @using MathNet.Numerics
 @using Energy.App.Standalone.Features.Analysis.Store;
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis.Models;
-@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Models
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis
+@using Energy.App.Standalone.Features.Analysis.Services.Analysis.ChartModels;
 
 @using Energy.App.Standalone.Features.EnergyReadings.Gas.Actions
 @using Energy.App.Standalone.Features.EnergyReadings.Gas
 @using Energy.App.Standalone.Features.EnergyReadings.Electricity
 @using Energy.App.Standalone.Features.EnergyReadings.Electricity.Actions
 @using Energy.App.Standalone.Features.Analysis.Services.Analysis.Interfaces;
-@using Energy.App.Standalone.Features.Analysis.Services.DataLoading.Interfaces;
 @using Energy.App.Standalone.Features.Setup.Household
 @using Energy.App.Standalone.Features.Setup.Household.Actions
 
@@ -47,7 +46,6 @@
 @using Energy.App.Standalone.Features.Analysis.Store.HistoricalForecast;
 @using Energy.App.Standalone.Features.Analysis.Store.HistoricalForecast.Actions;
 
-@using Energy.App.Standalone.Features.AppInit.Store;
 @using Energy.App.Standalone.DTOs
 @using Energy.App.Standalone.DTOs.Tariffs
 @using System.Collections.Immutable
