--- a/Energy.App.Standalone/App.razor
+++ b/Energy.App.Standalone/App.razor
@@ -6,7 +6,7 @@
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+        <FocusOnNavigate RouteData="@routeData" Selector=".eme-focus" />
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
