--- a/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
+++ b/Energy.App.Standalone/Features/Analysis/EnergyOnlyChart.razor
@@ -2,9 +2,10 @@
 @implements IAsyncDisposable
 @inject IJSRuntime JsRuntime
 
+<MudText Typo="Typo.h4" Align="Align.Center" Class="eme-focus">@MeterType Meter Analysis</MudText>
+
 @if (_ready)
 {
-    <h1>Hi</h1>
     <div id="profile-chart-meter-@MeterGlobalId" style="width: 100%; height: 500px; max-width: 100%">
     </div>
 }
@@ -166,6 +167,7 @@
     {
         base.Dispose();
         await JsRuntime.InvokeVoidAsync("ChartFunctions.dispose", $"profile-chart-meter-{MeterGlobalId}");
+        _ready = false;
     }
 
 }
