--- a/Energy.App.Standalone/PageComponents/MeterNavLinkContent.razor
+++ b/Energy.App.Standalone/PageComponents/MeterNavLinkContent.razor
@@ -1,7 +1,7 @@
 ﻿@if (IsHeating)
 {
-    <MudPaper Elevation="0" Style="background-color: inherit" Class="d-flex justify-space-between">
-        @ChildContent <MudIcon Class="mud-nav-link-icon mud-nav-link-icon-default" Icon="@Icons.Material.Filled.Thermostat"></MudIcon>
+    <MudPaper Elevation="0" Style="background-color: inherit" Class="d-flex">
+        @ChildContent <MudIcon Class="mud-nav-link-icon mud-nav-link-icon-default"  Icon="@Icons.Material.Filled.Thermostat"></MudIcon>
     </MudPaper>
 }
 else
