--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -6,13 +6,12 @@
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2 mt-3">
-            <MudText Typo="Typo.h4" Align="Align.Center">Welcome to Explain My Energy</MudText>
-
+            <MudText Typo="Typo.h4" Align="Align.Center" Class="eme-focus">Welcome to Explain My Energy</MudText>
         </MudPaper>
     </MudItem>
     <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2">
-            <MudText Typo="Typo.h5" Class="m-4 fw-bolder">Setup Status</MudText>
+            <MudText Typo="Typo.h5" Class="m-4 fw-bolder">App Setup Status</MudText>
             <MudList Dense="true">
                 <MudListItem><MudAlert Variant="Variant.Outlined" Severity="@HouseholdSeverity">Household Setup: @HouseholdStatus</MudAlert></MudListItem>
                 <MudListItem><MudAlert Variant="Variant.Outlined" Severity="@ElectricitySeverity">Electricity Meter: @ElectricityStatus</MudAlert></MudListItem>
